# codecrafters-shell-c

./: .gitignore  CMakeLists.txt  README.md
src/: main  main.c  run_program.h  run_program_win.c  tokenizer.h
src/modules/: builtins.c  builtins.h  get_a_job.c  get_a_job.h  run_job.c  run_job.h  run_program.h  run_program_unix.c  run_program_win.c  tokenizer.c  tokenizer.h
src/structs/: cmd_structs.h  program_structs.h
src/utils/: bg_utils.c  bg_utils.h  file_utils.c  file_utils.h  misc.c  misc.h  tokenizer.c
